updated spec to read list from officer role enum